# cxx-mock-link-seam

./: Makefile.am  README.md  baz.cpp  baz.hpp  bootstrap.sh  configure.ac  foo.cpp  foo.hpp  main.cpp
test/: Makefile.am.include  bazproxy.cpp  bazproxy.hpp  tests.cpp
